--- a/ABM.Paie/ABM.Paie.csproj
+++ b/ABM.Paie/ABM.Paie.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\pdfs\ABMq_CV.pdf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\pdfs\ABMq_CV.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.0" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="7.15.0" />
