feat: contact page and footer with links

--- a/ABM.Paie/ABM.Paie.csproj
+++ b/ABM.Paie/ABM.Paie.csproj
@@ -28,4 +28,9 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\linkedin\" />
+    <Folder Include="wwwroot\archive\" />
+  </ItemGroup>
+
 </Project>
