--- a/ABM.Paie/ABM.Paie.csproj
+++ b/ABM.Paie/ABM.Paie.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\images\linkedin\" />
     <Folder Include="wwwroot\archive\" />
+    <Folder Include="wwwroot\images\graphs\" />
   </ItemGroup>
 
 </Project>
