--- a/ABM.Paie/ABM.Paie.csproj
+++ b/ABM.Paie/ABM.Paie.csproj
@@ -32,6 +32,7 @@
     <Folder Include="wwwroot\images\linkedin\" />
     <Folder Include="wwwroot\archive\" />
     <Folder Include="wwwroot\images\graphs\" />
+    <Folder Include="wwwroot\images\logos\" />
   </ItemGroup>
 
 </Project>
