feat: actu2504 + links and resources update

--- a/ABM.Paie/ABM.Paie.csproj
+++ b/ABM.Paie/ABM.Paie.csproj
@@ -7,25 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="wwwroot\resources\ABMq_CV.pdf" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.0" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="7.15.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\resources\ABMq_Attestation_Sensibilisation_Handicap_2024-11-30.pdf" />
+    <None Include="wwwroot\resources\ABMq_CV.pdf" />
     <None Include="wwwroot\resources\ABMq_Fiche_Projet_CAFEL.pdf" />
+    <None Include="wwwroot\resources\ABMq_Handicap_Attestation_Sensibilisation_2024-11-30.pdf" />
+    <None Include="wwwroot\resources\ABMq_Handicap_Devenir_Referent_2025-02-11.pdf" />
+    <None Include="wwwroot\resources\ABMq_Handicap_Troubles_Cognitifs_2025-04-08.pdf" />
+    <None Include="wwwroot\resources\ABMq_Qualiopi_Certificat_2025-03-21.pdf" />
     <None Include="wwwroot\resources\Plaquette_CAFEL_2024-2025.pdf" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Update="wwwroot\resources\ABMq_CV.pdf">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
 
   <ItemGroup>
