--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -6,13 +6,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Components/Op.razor.css" CssScope="common-op-css-scope" />
+    <None Update="Components/OpButton.razor.css" CssScope="common-op-css-scope" />
+    <None Update="Components/OpLink.razor.css" CssScope="common-op-css-scope" />
   </ItemGroup>
 
 </Project>
