--- a/ABM.Paie.Formation/wwwroot/appsettings.json
+++ b/ABM.Paie.Formation/wwwroot/appsettings.json
@@ -8,124 +8,157 @@
   "AllowedHosts": "*",
   "uris": {
     "accueil": {
-      "uri": "/",
+      "location": "/",
       "label": "retourner à l'accueil",
       "content": "Accueil",
-      "image": "/logos/abm-paie/abm-paie_thin.svg"
+      "image": {
+        "source": "/logos/abm-paie/abm-paie_thin.svg",
+        "label": "Logo ABM Paie"
+      }
     },
     "formations": {
-      "uri": "/formations",
+      "location": "/formations",
       "label": "voir les formations",
       "content": "Formations"
     },
     "formations_catalogue": {
-      "uri": "/formations#catalogue",
+      "location": "/formations#catalogue",
       "label": "voir le catalogue de formations",
       "content": "Catalogue de formations"
     },
     "formations_perfectionnement": {
-      "uri": "/formations#perfectionnement",
+      "location": "/formations#perfectionnement",
       "label": "voir les formations de perfectionnement",
       "content": "Perfectionnement"
     },
     "actualites": {
-      "uri": "/actualites",
+      "location": "/actualites",
       "label": "voir les actualités",
       "content": "Actualités"
     },
     "abmpaie": {
-      "uri": "/abmpaie",
+      "location": "/abmpaie",
       "label": "en savoir plus sur ABM Paie",
       "content": "ABM Paie"
     },
     "abmpaie_organigramme": {
-      "uri": "/abmpaie#organigramme",
+      "location": "/abmpaie#organigramme",
       "label": "en savoir plus sur l'organigramme d'ABM Paie",
       "content": "Organigramme"
     },
     "abmpaie_equipe": {
-      "uri": "/abmpaie#equipe",
+      "location": "/abmpaie#equipe",
       "label": "en savoir plus sur l'équipe pédagogique",
       "content": "Équipe pédagogique"
     },
     "abmpaie_indicateurs": {
-      "uri": "/abmpaie#indicateurs",
+      "location": "/abmpaie#indicateurs",
       "label": "voir les indicateurs formation",
       "content": "Les indicateurs formation"
     },
     "abmpaie_valeurs": {
-      "uri": "/abmpaie#valeurs",
+      "location": "/abmpaie#valeurs",
       "label": "en savoir plus sur mes valeurs",
       "content": "Mes valeurs"
     },
     "abmpaie_ref-assistance": {
-      "uri": "/abmpaie#ref-assistance",
+      "location": "/abmpaie#ref-assistance",
       "label": "voir mes références Assistance technique et pédagogique",
       "content": "Référente Assistance technique et pédagogique"
     },
     "abmpaie_ref-handicap": {
-      "uri": "/abmpaie#ref-handicap",
+      "location": "/abmpaie#ref-handicap",
       "label": "voir mes référence handicap",
       "content": "Référente handicap"
     },
     "experience": {
-      "uri": "/experience",
+      "location": "/experience",
       "label": "découvrir mon parcours/expérience",
       "content": "Expérience"
     },
     "experience_cv": {
-      "uri": "/resources/ABMq_CV.pdf",
+      "location": "/resources/ABMq_CV.pdf",
       "label": "voir mon curriculum vitae",
       "content": "Curriculum Vitae",
       "isexternal" : "true"
     },
     "experience_silae": {
-      "uri": "/experience#silae",
+      "location": "/experience#silae",
       "label": "voir mon expérience en tant que salariée Silae",
       "content": "Salariée Silae"
     },
     "experience_chiffres": {
-      "uri": "/experience#chiffres",
+      "location": "/experience#chiffres",
       "label": "voir les chiffres en tant que formatrice Silae",
       "content": "Formatrice Silae en chiffres"
     },
     "experience_cafel": {
-      "uri": "/experience#cafel",
+      "location": "/experience#cafel",
       "label": "en savoir plus sur mes études CAFEL",
       "content": "Étudiante CAFEL"
     },
     "contact": {
-      "uri": "/contact",
+      "location": "/contact",
       "label": "me contacter",
       "content": "Contact"
     },
     "contact_rendez-vous": {
-      "uri": "/contact#rendez-vous",
+      "location": "/contact#rendez-vous",
       "label": "prendre un rendez-vous",
       "content": "Prise de rendez-vous",
       "isexternal" : "true"
     },
     "contact_coordonnees": {
-      "uri": "/contact#coordonnees",
+      "location": "/contact#coordonnees",
       "label": "voir mes coordonnées",
       "content": "Coordonnées"
     },
     "contact_pages-officielles": {
-      "uri": "/contact#pages-officielles",
+      "location": "/contact#pages-officielles",
       "label": "découvrir mes pages officielles",
       "content": "Pages officielles"
     },
     "partenariats": {
-      "uri": "/partenariats",
+      "location": "/partenariats",
       "label": "découvrir mes partenaires",
       "content": "Partenariats"
     },
     "partenariats_facilae": {
-      "uri": "https://www.facilaepaie.com",
+      "location": "https://www.facilaepaie.com",
       "label": "visiter Facilae Paie",
       "content": "visiter Facilae Paie",
-      "isexternal" : "true",
-      "image": "/images/facilaepaie/Logo Facilae_edited.avif"
+      "isexternal": "true",
+      "image": {
+        "source": "/logos/facilae/logo_facilae_edited.avif",
+        "label": "Logo Facilae Paie"
+      }
+    },
+    "linkedin": {
+      "location": "https://www.linkedin.com/in/abm-paie-1b551a336",
+      "label": "voir mon profil LinkedIn",
+      "content": "voir mon profil LinkedIn",
+      "isexternal": true,
+      "image": {
+        "source": "/logos/linkedin/LI-Logo.png",
+        "label": "Logo LinkedIn"
+      }
+    }
+  },
+  "mailtos": {
+    "paie-formation": {
+      "location": "mailto:paie-formation@abmq.fr",
+      "label": "contacter ABM Paie par email",
+      "content": "paie-formation@abmq.fr"
+    }
+  },
+  "images": {
+    "banner": {
+      "source": "/logos/abm-paie/abm-paie_banner_v3.svg",
+      "label": "ABM Paie - Formations Paie & DSN"
+    },
+    "whatsapp-glyph": {
+      "source": "/logos/whatsapp/Digital_Glyph_White.png",
+      "label": "Logo WhatsApp"
     }
   }
 }
