feat: contact page

--- a/ABM.Paie.Formation/wwwroot/appsettings.json
+++ b/ABM.Paie.Formation/wwwroot/appsettings.json
@@ -80,7 +80,7 @@
       "location": "/resources/ABMq_CV.pdf",
       "label": "voir mon curriculum vitae",
       "content": "Curriculum Vitae",
-      "isexternal" : "true"
+      "isexternal" : true
     },
     "experience_silae": {
       "location": "/experience#silae",
@@ -102,11 +102,10 @@
       "label": "me contacter",
       "content": "Contact"
     },
-    "contact_rendez-vous": {
-      "location": "/contact#rendez-vous",
-      "label": "prendre un rendez-vous",
-      "content": "Prise de rendez-vous",
-      "isexternal" : "true"
+    "contact_reserver": {
+      "location": "/contact#reserver",
+      "label": "réserver un créneau horaire",
+      "content": "Réserver un créneau horaire"
     },
     "contact_coordonnees": {
       "location": "/contact#coordonnees",
@@ -118,20 +117,11 @@
       "label": "découvrir mes pages officielles",
       "content": "Pages officielles"
     },
-    "partenariats": {
-      "location": "/partenariats",
-      "label": "découvrir mes partenaires",
-      "content": "Partenariats"
-    },
-    "partenariats_facilae": {
-      "location": "https://www.facilaepaie.com",
-      "label": "visiter Facilae Paie",
-      "content": "visiter Facilae Paie",
-      "isexternal": "true",
-      "image": {
-        "source": "/logos/facilae/logo_facilae_edited.avif",
-        "label": "Logo Facilae Paie"
-      }
+    "rendez-vous": {
+      "location": "https://outlook.office365.com/owa/calendar/rdv@abmq.fr/bookings/",
+      "label": "prendre un rendez-vous",
+      "content": "Prise de rendez-vous",
+      "isexternal" : true
     },
     "linkedin": {
       "location": "https://www.linkedin.com/in/abm-paie-1b551a336",
@@ -142,6 +132,21 @@
         "source": "/logos/linkedin/LI-Logo.png",
         "label": "Logo LinkedIn"
       }
+    },
+    "partenariats": {
+      "location": "/partenariats",
+      "label": "découvrir mes partenaires",
+      "content": "Partenariats"
+    },
+    "partenariats_facilae": {
+      "location": "https://www.facilaepaie.com",
+      "label": "visiter Facilae Paie",
+      "content": "Facilae Paie",
+      "isexternal": true,
+      "image": {
+        "source": "/logos/facilae/logo_facilae_edited.avif",
+        "label": "Logo Facilae Paie"
+      }
     }
   },
   "mailtos": {
@@ -149,6 +154,26 @@
       "location": "mailto:paie-formation@abmq.fr",
       "label": "contacter ABM Paie par email",
       "content": "paie-formation@abmq.fr"
+    },
+    "ref-handicap": {
+      "location": "mailto:referent-handicap@abmq.fr",
+      "label": "envoyer un mail pour une demande sur le handicap",
+      "content": "referent-handicap@abmq.fr"
+    },
+    "assistance": {
+      "location": "mailto:assistance-technique-pedagogique@abmq.fr",
+      "label": "envoyer un mail pour une demande sur l'assistance technique et pédagogique'",
+      "content": "assistance-technique-pedagogique@abmq.fr"
+    },
+    "facturation": {
+      "location": "mailto:paie-facturation@abmq.fr",
+      "label": "envoyer un mail pour une demande sur la facturation",
+      "content": "paie-facturation@abmq.fr"
+    },
+    "historique-versions": {
+      "location": "mailto:paie-historique-versions@abmq.fr",
+      "label": "envoyer un mail pour une demande sur l'historique des versions",
+      "content": "paie-historique-versions@abmq.fr"
     }
   },
   "images": {
