refacto: NavAction to Operation

--- a/ABM.Paie.Formation/wwwroot/appsettings.json
+++ b/ABM.Paie.Formation/wwwroot/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "uris": {
     "accueil": {
-      "location": "/",
       "label": "retourner à l'accueil",
+      "location": "/",
       "content": "Accueil",
       "image": {
         "source": "/logos/abm-paie/abm-paie_thin.svg",
@@ -17,116 +17,143 @@
       }
     },
     "formations": {
-      "location": "/formations",
       "label": "voir les formations",
+      "location": "/formations",
       "content": "Formations"
     },
     "formations_catalogue": {
-      "location": "/formations#catalogue",
       "label": "voir le catalogue de formations",
+      "location": "/formations#catalogue",
       "content": "Catalogue de formations"
     },
     "formations_perfectionnement": {
-      "location": "/formations#perfectionnement",
       "label": "voir les formations de perfectionnement",
+      "location": "/formations#perfectionnement",
       "content": "Perfectionnement"
     },
     "actualites": {
-      "location": "/actualites",
       "label": "voir les actualités",
+      "location": "/actualites",
       "content": "Actualités"
     },
     "abmpaie": {
-      "location": "/abmpaie",
       "label": "en savoir plus sur ABM Paie",
+      "location": "/abmpaie",
       "content": "ABM Paie"
     },
     "abmpaie_organigramme": {
-      "location": "/abmpaie#organigramme",
       "label": "en savoir plus sur l'organigramme d'ABM Paie",
+      "location": "/abmpaie#organigramme",
       "content": "Organigramme"
     },
     "abmpaie_equipe": {
-      "location": "/abmpaie#equipe",
       "label": "en savoir plus sur l'équipe pédagogique",
+      "location": "/abmpaie#equipe",
       "content": "Équipe pédagogique"
     },
     "abmpaie_indicateurs": {
-      "location": "/abmpaie#indicateurs",
       "label": "voir les indicateurs formation",
+      "location": "/abmpaie#indicateurs",
       "content": "Les indicateurs formation"
     },
     "abmpaie_valeurs": {
-      "location": "/abmpaie#valeurs",
       "label": "en savoir plus sur mes valeurs",
+      "location": "/abmpaie#valeurs",
       "content": "Mes valeurs"
     },
     "abmpaie_ref-assistance": {
-      "location": "/abmpaie#ref-assistance",
       "label": "voir mes références Assistance technique et pédagogique",
+      "location": "/abmpaie#ref-assistance",
       "content": "Référente Assistance technique et pédagogique"
     },
     "abmpaie_ref-handicap": {
-      "location": "/abmpaie#ref-handicap",
       "label": "voir mes référence handicap",
+      "location": "/abmpaie#ref-handicap",
       "content": "Référente handicap"
     },
     "experience": {
-      "location": "/experience",
       "label": "découvrir mon parcours/expérience",
+      "location": "/experience",
       "content": "Expérience"
     },
-    "experience_cv": {
-      "location": "/resources/ABMq_CV.pdf",
+    "cv": {
       "label": "voir mon curriculum vitae",
+      "location": "/resources/ABMq_CV.pdf",
       "content": "Curriculum Vitae",
       "isexternal" : true
     },
     "experience_silae": {
-      "location": "/experience#silae",
       "label": "voir mon expérience en tant que salariée Silae",
+      "location": "/experience#silae",
       "content": "Salariée Silae"
     },
     "experience_chiffres": {
-      "location": "/experience#chiffres",
       "label": "voir les chiffres en tant que formatrice Silae",
+      "location": "/experience#chiffres",
       "content": "Formatrice Silae en chiffres"
     },
     "experience_cafel": {
-      "location": "/experience#cafel",
       "label": "en savoir plus sur mes études CAFEL",
+      "location": "/experience#cafel",
       "content": "Étudiante CAFEL"
     },
     "contact": {
-      "location": "/contact",
       "label": "me contacter",
+      "location": "/contact",
       "content": "Contact"
     },
     "contact_reserver": {
-      "location": "/contact#reserver",
       "label": "réserver un créneau horaire",
+      "location": "/contact#reserver",
       "content": "Réserver un créneau horaire"
     },
     "contact_coordonnees": {
-      "location": "/contact#coordonnees",
       "label": "voir mes coordonnées",
+      "location": "/contact#coordonnees",
       "content": "Coordonnées"
     },
     "contact_pages-officielles": {
-      "location": "/contact#pages-officielles",
       "label": "découvrir mes pages officielles",
+      "location": "/contact#pages-officielles",
       "content": "Pages officielles"
     },
+    "contact_telephone": {
+      "label": "me contacter par téléphone",
+      "location": "/contact#telephone",
+      "content": "+33 7 48 10 65 39"
+    },
     "rendez-vous": {
-      "location": "https://outlook.office365.com/owa/calendar/rdv@abmq.fr/bookings/",
       "label": "prendre un rendez-vous",
+      "location": "https://outlook.office365.com/owa/calendar/rdv@abmq.fr/bookings/",
       "content": "Prise de rendez-vous",
-      "isexternal" : true
+      "isexternal": true
+    },
+    "call": {
+      "label": "me joindre par appel téléphonique",
+      "location": "tel:+33748106539",
+      "content": "Appel",
+      "isexternal": true
+    },
+    "sms": {
+      "label": "me joindre par SMS",
+      "location": "sms://+33748106539;?&body=Bonjour%20Marine%20MARQUIS%2C%0A",
+      "content": "SMS",
+      "isexternal": true
+    },
+    "whatsapp": {
+      "label": "me joindre par WhatsApp",
+      "location": "https://wa.me/33748106539?text=Bonjour%20Marine%20MARQUIS%2C%0A",
+      "content": "WhatsApp",
+      "isExternal": true,
+      "image": {
+        "source": "/logos/whatsapp/Digital_Inline_Green.svg",
+        "label": "Logo WhatsApp"
+      }
     },
     "linkedin": {
-      "location": "https://www.linkedin.com/in/abm-paie-1b551a336",
       "label": "voir mon profil LinkedIn",
-      "content": "voir mon profil LinkedIn",
+      "location": "https://www.linkedin.com/in/abm-paie-1b551a336",
+      "content": "Voir mon profil LinkedIn",
       "isexternal": true,
       "image": {
         "source": "/logos/linkedin/LI-Logo.png",
@@ -134,56 +161,72 @@
       }
     },
     "partenariats": {
-      "location": "/partenariats",
       "label": "découvrir mes partenaires",
+      "location": "/partenariats",
       "content": "Partenariats"
     },
-    "partenariats_facilae": {
-      "location": "https://www.facilaepaie.com",
+    "facilae": {
       "label": "visiter Facilae Paie",
+      "location": "https://www.facilaepaie.com",
+      "description": "Facilite vos migrations et vos paramétrages dans Silae...",
       "content": "Facilae Paie",
       "isexternal": true,
       "image": {
         "source": "/logos/facilae/logo_facilae_edited.avif",
         "label": "Logo Facilae Paie"
       }
+    },
+    "prismatik": {
+      "label": "visiter Prismatik",
+      "location": "https://www.prismatik.fr/",
+      "description": "Chez Prismatik, nous créons des jeux sérieux physiques et sur-mesure",
+      "content": "Prismatik",
+      "isexternal": true,
+      "image": {
+        "source": "https://www.prismatik.fr/wp-content/uploads/Prismatik_logoweb.webp",
+        "label": "Logo Prismatik"
+      }
     }
   },
   "mailtos": {
     "paie-formation": {
-      "location": "mailto:paie-formation@abmq.fr",
       "label": "contacter ABM Paie par email",
+      "location": "mailto:paie-formation@abmq.fr",
       "content": "paie-formation@abmq.fr"
     },
     "ref-handicap": {
-      "location": "mailto:referent-handicap@abmq.fr",
       "label": "envoyer un mail pour une demande sur le handicap",
+      "location": "mailto:referent-handicap@abmq.fr",
+      "description": "Sur le handicap",
       "content": "referent-handicap@abmq.fr"
     },
     "assistance": {
-      "location": "mailto:assistance-technique-pedagogique@abmq.fr",
       "label": "envoyer un mail pour une demande sur l'assistance technique et pédagogique'",
+      "location": "mailto:assistance-technique-pedagogique@abmq.fr",
+      "description": "Sur l'assistance technique et pédagogique",
       "content": "assistance-technique-pedagogique@abmq.fr"
     },
     "facturation": {
-      "location": "mailto:paie-facturation@abmq.fr",
       "label": "envoyer un mail pour une demande sur la facturation",
+      "location": "mailto:paie-facturation@abmq.fr",
+      "description": "Sur la facturation",
       "content": "paie-facturation@abmq.fr"
     },
     "historique-versions": {
-      "location": "mailto:paie-historique-versions@abmq.fr",
       "label": "envoyer un mail pour une demande sur l'historique des versions",
+      "location": "mailto:paie-historique-versions@abmq.fr",
+      "description": "Sur l'historique des versions",
       "content": "paie-historique-versions@abmq.fr"
     }
   },
   "images": {
     "banner": {
-      "source": "/logos/abm-paie/abm-paie_banner_v3.svg",
-      "label": "ABM Paie - Formations Paie & DSN"
+      "label": "ABM Paie - Formations Paie & DSN",
+      "source": "/logos/abm-paie/abm-paie_banner_v3.svg"
     },
     "whatsapp-glyph": {
-      "source": "/logos/whatsapp/Digital_Glyph_White.png",
-      "label": "Logo WhatsApp"
+      "label": "Logo WhatsApp",
+      "source": "/logos/whatsapp/Digital_Glyph_White.png"
     }
   }
 }
