--- a/ABM.Paie.Formation/wwwroot/appsettings.json
+++ b/ABM.Paie.Formation/wwwroot/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "version": 20260101.0,
   "uris": {
     "accueil": {
       "label": "retourner à l'accueil",
@@ -168,18 +169,18 @@
     "facilae": {
       "label": "visiter Facilae Paie",
       "location": "https://www.facilaepaie.com",
-      "description": "Facilite vos migrations et vos paramétrages dans Silae...",
+      "description": "\"Facilite vos migrations et vos paramétrages dans Silae...\"",
       "content": "Facilae Paie",
       "isexternal": true,
       "image": {
-        "source": "/logos/facilae/logo_facilae_edited.avif",
+        "source": "https://static.wixstatic.com/media/5bc43a_e8d3d16eefd8470ab97f4eee74f65d9e~mv2.jpg/v1/fill/w_474,h_486,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/Logo%20Facilae_edited.jpg",
         "label": "Logo Facilae Paie"
       }
     },
     "prismatik": {
       "label": "visiter Prismatik",
       "location": "https://www.prismatik.fr/",
-      "description": "Chez Prismatik, nous créons des jeux sérieux physiques et sur-mesure",
+      "description": "\"Chez Prismatik, nous créons des jeux sérieux physiques et sur-mesure\"",
       "content": "Prismatik",
       "isexternal": true,
       "image": {
