refactor: app config and uris

--- a/ABM.Paie.Formation/wwwroot/appsettings.json
+++ b/ABM.Paie.Formation/wwwroot/appsettings.json
@@ -11,25 +11,21 @@
     "accueil": {
       "label": "retourner à l'accueil",
       "location": "/",
-      "content": "Accueil",
-      "image": {
-        "source": "/logos/abm-paie/abm-paie_thin.svg",
-        "label": "Logo ABM Paie"
-      }
+      "content": "Accueil"
     },
     "formations": {
       "label": "voir les formations",
       "location": "/formations",
       "content": "Formations"
     },
-    "formations_catalogue": {
+    "catalogue": {
       "label": "voir le catalogue de formations",
-      "location": "/formations#catalogue",
+      "location": "#catalogue",
       "content": "Catalogue de formations"
     },
-    "formations_perfectionnement": {
+    "perfectionnement": {
       "label": "voir les formations de perfectionnement",
-      "location": "/formations#perfectionnement",
+      "location": "#perfectionnement",
       "content": "Perfectionnement"
     },
     "actualites": {
@@ -42,34 +38,34 @@
       "location": "/abmpaie",
       "content": "ABM Paie"
     },
-    "abmpaie_organigramme": {
+    "organigramme": {
       "label": "en savoir plus sur l'organigramme d'ABM Paie",
-      "location": "/abmpaie#organigramme",
+      "location": "#organigramme",
       "content": "Organigramme"
     },
-    "abmpaie_equipe": {
+    "equipe": {
       "label": "en savoir plus sur l'équipe pédagogique",
-      "location": "/abmpaie#equipe",
+      "location": "#equipe",
       "content": "Équipe pédagogique"
     },
-    "abmpaie_indicateurs": {
+    "indicateurs": {
       "label": "voir les indicateurs formation",
-      "location": "/abmpaie#indicateurs",
+      "location": "#indicateurs",
       "content": "Les indicateurs formation"
     },
-    "abmpaie_valeurs": {
+    "valeurs": {
       "label": "en savoir plus sur mes valeurs",
-      "location": "/abmpaie#valeurs",
+      "location": "#valeurs",
       "content": "Mes valeurs"
     },
-    "abmpaie_ref-assistance": {
+    "ref-assistance": {
       "label": "voir mes références Assistance technique et pédagogique",
-      "location": "/abmpaie#ref-assistance",
+      "location": "#ref-assistance",
       "content": "Référente Assistance technique et pédagogique"
     },
-    "abmpaie_ref-handicap": {
+    "ref-handicap": {
       "label": "voir mes référence handicap",
-      "location": "/abmpaie#ref-handicap",
+      "location": "#ref-handicap",
       "content": "Référente handicap"
     },
     "experience": {
@@ -83,19 +79,19 @@
       "content": "Curriculum Vitae",
       "isexternal" : true
     },
-    "experience_silae": {
+    "silae": {
       "label": "voir mon expérience en tant que salariée Silae",
-      "location": "/experience#silae",
+      "location": "#silae",
       "content": "Salariée Silae"
     },
-    "experience_chiffres": {
+    "chiffres": {
       "label": "voir les chiffres en tant que formatrice Silae",
-      "location": "/experience#chiffres",
+      "location": "#chiffres",
       "content": "Formatrice Silae en chiffres"
     },
-    "experience_cafel": {
+    "cafel": {
       "label": "en savoir plus sur mes études CAFEL",
-      "location": "/experience#cafel",
+      "location": "#cafel",
       "content": "Étudiante CAFEL"
     },
     "contact": {
@@ -103,25 +99,20 @@
       "location": "/contact",
       "content": "Contact"
     },
-    "contact_reserver": {
+    "reserver": {
       "label": "réserver un créneau horaire",
-      "location": "/contact#reserver",
+      "location": "#reserver",
       "content": "Réserver un créneau horaire"
     },
-    "contact_coordonnees": {
+    "coordonnees": {
       "label": "voir mes coordonnées",
-      "location": "/contact#coordonnees",
+      "location": "#coordonnees",
       "content": "Coordonnées"
     },
-    "contact_pages-officielles": {
+    "pages-officielles": {
       "label": "découvrir mes pages officielles",
-      "location": "/contact#pages-officielles",
+      "location": "#pages-officielles",
       "content": "Pages officielles"
-    },
-    "contact_telephone": {
-      "label": "me contacter par téléphone",
-      "location": "/contact#telephone",
-      "content": "+33 7 48 10 65 39"
     },
     "rendez-vous": {
       "label": "prendre un rendez-vous",
@@ -145,25 +136,17 @@
       "label": "me joindre par WhatsApp",
       "location": "https://wa.me/33748106539?text=Bonjour%20Marine%20MARQUIS%2C%0A",
       "content": "WhatsApp",
-      "isExternal": true,
-      "image": {
-        "source": "/logos/whatsapp/Digital_Inline_Green.svg",
-        "label": "Logo WhatsApp"
-      }
+      "isExternal": true
     },
     "linkedin": {
       "label": "voir mon profil LinkedIn",
       "location": "https://www.linkedin.com/in/abm-paie-1b551a336",
       "content": "Voir mon profil LinkedIn",
-      "isexternal": true,
-      "image": {
-        "source": "/logos/linkedin/LI-Logo.png",
-        "label": "Logo LinkedIn"
-      }
+      "isexternal": true
     },
     "partenariats": {
       "label": "découvrir mes partenaires",
-      "location": "/partenariats",
+      "location": "#partenariats",
       "content": "Partenariats"
     },
     "facilae": {
@@ -171,22 +154,14 @@
       "location": "https://www.facilaepaie.com",
       "description": "\"Facilite vos migrations et vos paramétrages dans Silae...\"",
       "content": "Facilae Paie",
-      "isexternal": true,
-      "image": {
-        "source": "https://static.wixstatic.com/media/5bc43a_e8d3d16eefd8470ab97f4eee74f65d9e~mv2.jpg/v1/fill/w_474,h_486,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/Logo%20Facilae_edited.jpg",
-        "label": "Logo Facilae Paie"
-      }
+      "isexternal": true
     },
     "prismatik": {
       "label": "visiter Prismatik",
       "location": "https://www.prismatik.fr/",
       "description": "\"Chez Prismatik, nous créons des jeux sérieux physiques et sur-mesure\"",
       "content": "Prismatik",
-      "isexternal": true,
-      "image": {
-        "source": "https://www.prismatik.fr/wp-content/uploads/Prismatik_logoweb.webp",
-        "label": "Logo Prismatik"
-      }
+      "isexternal": true
     }
   },
   "mailtos": {
@@ -221,13 +196,33 @@
     }
   },
   "images": {
+    "logo-thin": {
+      "label": "Logo ABM Paie",
+      "source": "/logos/abm-paie/abm-paie_thin.svg"
+    },
     "banner": {
       "label": "ABM Paie - Formations Paie & DSN",
       "source": "/logos/abm-paie/abm-paie_banner_v3.svg"
     },
+    "linkedin": {
+      "label": "Logo LinkedIn",
+      "source": "/logos/linkedin/LI-Logo.png"
+    },
+    "whatsapp-inline": {
+      "label": "Logo WhatsApp",
+      "source": "/logos/whatsapp/Digital_Inline_Green.svg"
+    },
     "whatsapp-glyph": {
       "label": "Logo WhatsApp",
       "source": "/logos/whatsapp/Digital_Glyph_White.png"
+    },
+    "facilae": {
+      "label": "Logo Facilae Paie",
+      "source": "https://static.wixstatic.com/media/5bc43a_e8d3d16eefd8470ab97f4eee74f65d9e~mv2.jpg/v1/fill/w_474,h_486,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/Logo%20Facilae_edited.jpg"
+    },
+    "prismatik": {
+      "label": "Logo Prismatik",
+      "source": "https://www.prismatik.fr/wp-content/uploads/Prismatik_logoweb.webp"
     }
   }
 }
