--- a/ABM.Paie.Formation/wwwroot/appsettings.json
+++ b/ABM.Paie.Formation/wwwroot/appsettings.json
@@ -8,11 +8,13 @@
   "AllowedHosts": "*",
   "version": 20260101.0,
   "uris": {
+    //accueil
     "accueil": {
       "label": "retourner à l'accueil",
       "location": "/",
       "content": "Accueil"
     },
+    //formations
     "formations": {
       "label": "voir les formations",
       "location": "/formations",
@@ -28,11 +30,13 @@
       "location": "#perfectionnement",
       "content": "Perfectionnement"
     },
+    //actualites
     "actualites": {
       "label": "voir les actualités",
       "location": "/actualites",
       "content": "Actualités"
     },
+    //abmpaie
     "abmpaie": {
       "label": "en savoir plus sur ABM Paie",
       "location": "/abmpaie",
@@ -68,6 +72,12 @@
       "location": "#ref-handicap",
       "content": "Référente handicap"
     },
+    "qualiopi": {
+      "label": "voir ma certification QUALIOPI",
+      "location": "#qualiopi",
+      "content": "Certification QUALIOPI"
+    },
+    //experience
     "experience": {
       "label": "découvrir mon parcours/expérience",
       "location": "/experience",
@@ -77,7 +87,7 @@
       "label": "voir mon curriculum vitae",
       "location": "/resources/ABMq_CV.pdf",
       "content": "Curriculum Vitae",
-      "isexternal" : true
+      "isexternal": true
     },
     "silae": {
       "label": "voir mon expérience en tant que salariée Silae",
@@ -94,6 +104,7 @@
       "location": "#cafel",
       "content": "Étudiante CAFEL"
     },
+    //contact
     "contact": {
       "label": "me contacter",
       "location": "/contact",
@@ -144,6 +155,7 @@
       "content": "Voir mon profil LinkedIn",
       "isexternal": true
     },
+    //partenariats
     "partenariats": {
       "label": "découvrir mes partenaires",
       "location": "#partenariats",
@@ -165,6 +177,7 @@
     }
   },
   "mailtos": {
+    //abmq.fr
     "paie-formation": {
       "label": "contacter ABM Paie par email",
       "location": "mailto:paie-formation@abmq.fr",
@@ -196,6 +209,7 @@
     }
   },
   "images": {
+    //abmq
     "logo-thin": {
       "label": "Logo ABM Paie",
       "source": "/logos/abm-paie/abm-paie_thin.svg"
@@ -204,6 +218,25 @@
       "label": "ABM Paie - Formations Paie & DSN",
       "source": "/logos/abm-paie/abm-paie_banner_v3.svg"
     },
+    //mjo
+    "absences": {
+      "label": "Dessin d'absence",
+      "source": "/images/mjo/ABMq_Absences.jpg"
+    },
+    "certifications": {
+      "label": "Dessin de certification",
+      "source": "images/mjo/ABMq_Certifications.png"
+    },
+    //partenariats
+    "facilae": {
+      "label": "Logo Facilae Paie",
+      "source": "https://static.wixstatic.com/media/5bc43a_e8d3d16eefd8470ab97f4eee74f65d9e~mv2.jpg/v1/fill/w_474,h_486,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/Logo%20Facilae_edited.jpg"
+    },
+    "prismatik": {
+      "label": "Logo Prismatik",
+      "source": "https://www.prismatik.fr/wp-content/uploads/Prismatik_logoweb.webp"
+    },
+    //brands
     "linkedin": {
       "label": "Logo LinkedIn",
       "source": "/logos/linkedin/LI-Logo.png"
@@ -215,14 +248,6 @@
     "whatsapp-glyph": {
       "label": "Logo WhatsApp",
       "source": "/logos/whatsapp/Digital_Glyph_White.png"
-    },
-    "facilae": {
-      "label": "Logo Facilae Paie",
-      "source": "https://static.wixstatic.com/media/5bc43a_e8d3d16eefd8470ab97f4eee74f65d9e~mv2.jpg/v1/fill/w_474,h_486,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/Logo%20Facilae_edited.jpg"
-    },
-    "prismatik": {
-      "label": "Logo Prismatik",
-      "source": "https://www.prismatik.fr/wp-content/uploads/Prismatik_logoweb.webp"
     }
   }
 }
